# spina_arm_controll

./: CMakeLists.txt  README.md  package.xml
launch/: joy_spina.launch.py  send_angle.launch.py
src/: angle_cmd_publisher.cpp  angle_send.cpp  joy_spina.cpp  seSe_arm_controll.cpp
